--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="bg-white shadow">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div>
-                <img src="logo 2.jpeg" alt="Logo" class="h-15 w-20">
+                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/logo%202.jpeg?raw=true" alt="Logo" class="h-15 w-20">
             </div>
 
             <nav class="flex space-x-4">
