--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="bg-gray-100 py-12">
         <div class="container mx-auto px-6 flex items-center">
             <div class="w-1/2">
-                <img src="images/Product.jpeg" alt="Liquid Tree Product" class="w-full h-auto">
+                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/Product.jpeg?raw=true" alt="Liquid Tree Product" class="w-full h-auto">
             </div>
             <div class="w-1/2 text-center">
                 <h2 class="text-xl uppercase text-gray-600">Our Latest Eco-Friendly Products</h2>
