--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Liquid Tree</title>
+    
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {}
+            }
+        }
+    </script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Nunito', sans-serif;
         }
-        html
-        {
+        html {
             scroll-behavior: smooth;
         }
     </style>
@@ -19,7 +30,7 @@
     <header class="bg-white shadow">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div>
-                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/logo%202.jpeg?raw=true" alt="Logo" class="h-15 w-20">
+                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/logo%202.jpeg?raw=true" alt="Logo" class="h-16 w-20">
             </div>
 
             <nav class="flex space-x-4">
@@ -83,28 +94,29 @@
                 <span id="moreText" style="display:none;">After ten days of using Liquid Tree, you may notice significant improvements in both your vitality and overall well-being. If it’s a health or wellness product, it could enhance your energy levels, provide essential nutrients, and promote better hydration, leaving you feeling revitalized. For skincare, it might improve skin texture and radiance, reducing inflammation and boosting natural glow. If Liquid Tree represents an eco-friendly innovation, such as an air-purifying system, it could create a cleaner and more balanced environment, positively affecting your mood and health. Additionally, it may support mental clarity by reducing stress and fostering focus, helping you thrive in your daily activities.</span>
                 <a href="#" onclick="toggleText()" id="readMoreLink" class="flex items-center text-green-600"><i class="fas fa-arrow-right mr-2"></i>Read More</a>
             </div>
-        <div class="w-1/2">
-            <img src="https://github.com/Ishika-15/ECOVISION/blob/main/product2.jpeg?raw=true" alt="Liquid Tree wellness product" class="w-full h-auto">
+            <div class="w-1/2">
+                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/product2.jpeg?raw=true" alt="Liquid Tree wellness product" class="w-full h-auto">
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<script>
-    function toggleText() {
-    var moreText = document.getElementById("moreText");
-    var shortText = document.getElementById("shortText");
-    var link = document.getElementById("readMoreLink");
+    <script>
+        function toggleText() {
+            var moreText = document.getElementById("moreText");
+            var shortText = document.getElementById("shortText");
+            var link = document.getElementById("readMoreLink");
 
-    if (moreText.style.display === "none") {
-        moreText.style.display = "inline";
-        link.innerHTML = "Read Less";
-    } else {
-        moreText.style.display = "none";
-        link.innerHTML = "Read More";
-    }
-}
-</script>
-
+            if (moreText.style.display === "none" || moreText.style.display === "") {
+                moreText.style.display = "inline";
+                shortText.style.display = "none";
+                link.innerHTML = "<i class='fas fa-arrow-left mr-2'></i>Read Less";
+            } else {
+                moreText.style.display = "none";
+                shortText.style.display = "inline";
+                link.innerHTML = "<i class='fas fa-arrow-right mr-2'></i>Read More";
+            }
+        }
+    </script>
 
     <!-- Testimonials Section -->
     <section class="bg-white py-12">
