--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="bg-gray-100 py-12">
         <div class="container mx-auto px-6 flex items-center">
             <div class="w-1/2">
-                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/Product.jpeg?raw=true" alt="Liquid Tree Product" class="w-full h-auto">
+                <img src="https://raw.githubusercontent.com/Ishika-15/ECOVISION/main/Product.jpeg" alt="Liquid Tree Product" class="w-full h-auto">
             </div>
             <div class="w-1/2 text-center">
                 <h2 class="text-xl uppercase text-gray-600">Our Latest Eco-Friendly Products</h2>
@@ -95,7 +95,7 @@
                 <a href="#" onclick="toggleText()" id="readMoreLink" class="flex items-center text-green-600"><i class="fas fa-arrow-right mr-2"></i>Read More</a>
             </div>
             <div class="w-1/2">
-                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/product2.jpeg?raw=true" alt="Liquid Tree wellness product" class="w-full h-auto">
+                <img src="https://raw.githubusercontent.com/Ishika-15/ECOVISION/main/product2.jpeg" alt="Liquid Tree wellness product" class="w-full h-auto">
             </div>
         </div>
     </section>
