--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 <img src="images/logo%202.jpeg" alt="Logo" class="h-15 w-20">
             </div>
             <nav class="flex space-x-4">
-                <a href="website.html" class="text-gray-700 hover:text-green-600"><b>Home</b></a>
+                <a href="index.html" class="text-gray-700 hover:text-green-600"><b>Home</b></a>
                 <a href="about.html" class="text-gray-700 hover:text-green-600"><b>About</b></a>
                 <a href="contact.html" class="text-gray-700 hover:text-green-600"><b>Contact Us</b></a>
             </nav>
@@ -91,7 +91,7 @@
     <section class="bg-gray-200 py-16">
         <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
             <div>
-                <img src="images/maps.jpg" alt="Map location placeholder" class="w-full">
+                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/maps.jpg?raw=true" alt="Map location placeholder" class="w-full">
             </div>
             <div class="p-8 bg-teal-100 rounded-lg">
                 <h2 class="text-green-600 font-bold">LOCATION</h2>
