--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
     <footer class="bg-teal-100 py-12">
         <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 text-gray-700">
             <div>
-                <img src="images/logo%202.jpeg" alt="Footer Company Logo" class="mb-3 footer-logo">
+                <img src="https://github.com/Ishika-15/ECOVISION/blob/main/logo%202.jpeg?raw=true" alt="Footer Company Logo" class="mb-3 footer-logo">
                 <p>Tanago Energy Services, Inc.</p>
                 <p>Jln Cempaka Wangi No 22, Jakarta - Indonesia</p>
             </div>
